# PDF-Translator

./: .nixpacksignore  .railwayignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  build.sh  deploy.bat  deploy.py  deploy.sh  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  setup.py  test_translation.py
attached_assets/: Pasted--I-want-to-build-a-platform-that-allows-users-to-upload-any-PDF-file-written-in-any-language-and-co-1746520522879.txt
client/: index.html
debug_output/: page_1_blocks.json  page_1_translations.json  translation_test.json
replit_agent/: architecture.md
scripts/: aggressive_translate.py  direct_translate.py  exact_layout_translate.py  extreme_translate.py  force_translate_pdf.py  guaranteed_translate.py  pdf_processor.py  pure_text_translate.py  robust_pdf_translator.py  setup_python.sh  simple_pdf_translator.py  text_only_translate.py
server/: index.ts  routes.ts  storage.ts  vite.ts
shared/: schema.ts
temp/: extracted-4b2ba819-c080-4426-92b1-104b50123aa9.txt  extracted-b7f09008-4d67-4fae-b30c-6bf998611e26.txt  to-translate-2ff6f494-d6bc-4ccb-94af-68d57b5652e0.txt  to-translate-44c0cb10-b993-47e7-8558-6f31c2890332.txt  to-translate-5125eac6-7918-4217-97f1-14c20c575434.txt  translated-2f30795f-0b30-4147-b56d-f7f4cb1936e8.txt  translated-542f81d5-ad05-4895-a353-6720996e2242.txt  translated-90386455-1569-4864-89bf-92467cc7d39a.txt  translated-930829e1-a733-4c56-878c-407efe636409.txt  translated-a65b55f5-27ef-428d-9721-6be2f671c897.txt  translated-c4115857-50cd-4750-b3e8-0e0d2f9aa5f0.txt  (+1 more)
(+16 files in other folders)
