[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "easyocr>=1.11.2",
    "wand>=0.6.13",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.0",
]
